load("@rules_android//rules:rules.bzl", "android_binary")

android_binary(
    name = "WallpaperPicker",
    srcs = glob(["src/**/*.java"]),
    custom_package = "com.android.wallpaperpicker",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = ["//prebuilts/sdk/current/support:android-support-v4"],
)
